--- a/Sample_CV/Sample_CV/Views/Shared/_Layout.cshtml
+++ b/Sample_CV/Sample_CV/Views/Shared/_Layout.cshtml
@@ -11,9 +11,9 @@
 	<meta name="author" content="">
 	<link rel="shortcut icon" href="favicon.ico">
 
-	<script defer src="assets/fontawesome/js/all.js"></script>
-	<link id="theme-style" rel="stylesheet" href="assets/css/theme-1.css">
-	<link id="theme-style" rel="stylesheet" href="assets/css/style.css">
+	<script defer src="~/assets/fontawesome/js/all.js"></script>
+	<link id="theme-style" rel="stylesheet" href="~/assets/css/theme-1.css">
+	<link id="theme-style" rel="stylesheet" href="~/assets/css/style.css">
 
 </head>
 
@@ -32,7 +32,7 @@
 
 				<div id="navigation" class="collapse navbar-collapse flex-column">
 					<div class="profile-section pt-3 pt-lg-0">
-						<img class="profile-image mb-3 rounded-circle mx-auto" src="assets/images/me.jpg" alt="image">
+						<img class="profile-image mb-3 rounded-circle mx-auto" src="~/assets/images/me.jpg" alt="image">
 
 						<div class="bio mb-3">سلام، مرضیه فاطمی هستم.  به وبسایت شخصی من خوش
 							آمدید.</div>
@@ -73,9 +73,9 @@
 	</div>
 
 	<!-- Javascript -->
-	<script src="assets/plugins/jquery-3.4.1.min.js"></script>
-	<script src="assets/plugins/popper.min.js"></script>
-	<script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+	<script src="~/assets/plugins/jquery-3.4.1.min.js"></script>
+	<script src="~/assets/plugins/popper.min.js"></script>
+	<script src="~/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
