--- a/Sample_CV/Sample_CV/Views/Shared/_Layout.cshtml
+++ b/Sample_CV/Sample_CV/Views/Shared/_Layout.cshtml
@@ -48,11 +48,11 @@
 					</div>
 					<ul class="navbar-nav flex-column text-right">
 						<li class="nav-item">
-							<a class="nav-link" href="index.html"><i class="fas fa-user fa-fw ml-2"></i>صفحه اصلی<span
+							<a class="nav-link" asp-controller="home" asp-action="index"><i class="fas fa-user fa-fw ml-2"></i>صفحه اصلی<span
 									class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="contact.html"><i
+							<a class="nav-link" asp-controller="home" asp-action="contact"><i
 									class="fas fa-envelope-open-text fa-fw ml-2"></i>ارتباط با ما</a>
 						</li>
 					</ul>
