--- a/Sample_CV/Sample_CV/Views/Home/Components/Projects/PView.cshtml
+++ b/Sample_CV/Sample_CV/Views/Home/Components/Projects/PView.cshtml
@@ -3,7 +3,7 @@
 
 <section class="featured-section p-3 p-lg-5">
 			<div class="container">
-				<h2 class="section-title font-weight-bold mb-5">خاص ترین پروژه ها</h2>
+				<h2 class="section-title font-weight-bold mb-5">برخی پروژه ها</h2>
 				<div class="row">
 
 					@foreach(var item in Model)
@@ -12,7 +12,7 @@
 						<div class="card project-card">
 							<div class="row no-gutters">
 								<div class="col-lg-4 card-img-holder">
-									<img src="~/assets/images/project/@item.Image" class="card-img" alt="image">
+									<img src="~/assets/images/project/@item.Image" class="card-img" alt=@item.Image  title="@item.Name">
 								</div>
 								<div class="col-lg-8">
 									<div class="card-body">
