--- a/Sample_CV/Sample_CV/Views/Home/Contact.cshtml
+++ b/Sample_CV/Sample_CV/Views/Home/Contact.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model Sample_CV.Models.Contact
+@{
     ViewData["Title"] = "تماس با ما";
 }
 
@@ -35,14 +36,16 @@
 					<h3 class="text-center mb-3">در دسترس باشید!</h3>
 					<div class="form-row">
 						<div class="form-group col-md-6">
-							<label class="sr-only" for="cname">نام</label>
-							<input type="text" class="form-control" id="cname" name="name" placeholder="نام"
-								minlength="2" required="" aria-required="true">
+							<label class="sr-only" asp-for="@Model.Name">نام</label>
+							<input type="text" class="form-control" asp-for="@Model.Name" placeholder="نام" />
+							<span asp-validation-for="@Model.Name" class="text-danger"></span> 
+							
 						</div>
 						<div class="form-group col-md-6">
-							<label class="sr-only" for="cemail">ایمیل</label>
-							<input type="email" class="form-control" id="cemail" name="email" placeholder="ایمیل"
-								required="" aria-required="true">
+							<label class="sr-only" asp-for="@Model.Email">ایمیل</label>
+							<input type="email" class="form-control" asp-for="@Model.Email" placeholder="ایمیل" />
+								
+								<span asp-validation-for="@Model.Email" class="text-danger"></span>
 						</div>
 						<div class="form-group col-12">
 							<select id="services" class="custom-select" name="services">
@@ -54,10 +57,12 @@
 							</select>
 						</div>
 						<div class="form-group col-12">
-							<label class="sr-only" for="cmessage">پیغام شما</label>
-							<textarea class="form-control" id="cmessage" name="message"
-								placeholder="پیغام خود را وارد نمایید ..." rows="10" required=""
-								aria-required="true"></textarea>
+							<label class="sr-only" asp-for="@Model.msg">پیغام شما</label>
+							<textarea class="form-control" asp-for="@Model.msg"
+								placeholder="پیغام خود را وارد نمایید ..." rows="10"
+								></textarea>
+								<span  asp-validation-for="@Model.msg" class="text_danger"></span>
+
 						</div>
 						<div class="form-group col-12">
 							<button type="submit" class="btn btn-block btn-primary py-2">ارسال</button>
