--- a/Sample_CV/Sample_CV/Views/Home/Contact.cshtml
+++ b/Sample_CV/Sample_CV/Views/Home/Contact.cshtml
@@ -32,6 +32,24 @@
 		</section>
 		<section class="contact-section px-3 py-5 p-md-5">
 			<div class="container">
+
+				@if (!string.IsNullOrWhiteSpace(ViewBag.Success))
+			   {
+				   <div class="bg-success">
+				  <p> @ViewBag.Success </p>
+				  </div>
+				   
+			   }
+			   @if (!string.IsNullOrWhiteSpace(ViewBag.Error))
+			   {
+				    <div class="bg-danger">
+				    <p> @ViewBag.Error </p>
+					</div>
+				   
+			   }
+
+
+
 				<form id="contact-form" class="contact-form col-lg-8 mx-lg-auto" method="post" action="#">
 					<h3 class="text-center mb-3">در دسترس باشید!</h3>
 					<div class="form-row">
