selectlist added but the modelsatete is not valid for no good reason

--- a/Sample_CV/Sample_CV/Views/Home/Contact.cshtml
+++ b/Sample_CV/Sample_CV/Views/Home/Contact.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Sample_CV.Models.Contact
+
 @{
     ViewData["Title"] = "تماس با ما";
 }
@@ -66,12 +67,9 @@
 								<span asp-validation-for="@Model.Email" class="text-danger"></span>
 						</div>
 						<div class="form-group col-12">
-							<select id="services" class="custom-select" name="services">
-								<option selected>سرویس مورد نظر خود را انتخاب کنید...</option>
-								<option value="basic">نقره ای</option>
-								<option value="standard">طلایی</option>
-								<option value="premium">پلاتین</option>
-								<option value="not sure">الماس</option>
+							<select class="custom-select" asp-for="@Model.Service_Id" asp-items="@Model.Services">
+								<option value="0" selected="selected" >سرویس مورد نظر خود را انتخاب کنید...</option>
+								
 							</select>
 						</div>
 						<div class="form-group col-12">
