--- a/Sample_CV/Sample_CV/Views/Home/Contact.cshtml
+++ b/Sample_CV/Sample_CV/Views/Home/Contact.cshtml
@@ -1,89 +1,103 @@
-﻿@model Sample_CV.Models.Contact
-
+﻿@model Contact
 @{
-    ViewData["Title"] = "تماس با ما";
+    ViewData["Title"] = "ارتباط با ما";
 }
 
 <section class="cta-section theme-bg-light py-5">
-			<div class="container text-center single-col-max-width">
-				<h2 class="heading">ارتباط با ما</h2>
-				<div class="intro">
-					<p>شما می توانید از طریق فرم زیر با ما ارتباط بگیرید. لطفا پس از پرکردن آیتم ها، پیغام مورد نظر را
-						نوشته و ارسال کنید.</a></p>
-					<p>از طریق شبکه های اجتماعی با ما در ارتباط باشید</p>
-					<ul class="list-inline mb-0">
-						<li class="list-inline-item mb-3"><a class="twitter" href="#"><i
-									class="fab fa-twitter fa-fw fa-lg"></i></a></li>
+    <div class="container text-center single-col-max-width">
+        <h2 class="heading">ارتباط با ما</h2>
+        <div class="intro">
+            <p>
+                شما می توانید از طریق فرم زیر با ما ارتباط بگیرید. لطفا پس از پرکردن آیتم ها، پیغام مورد نظر را
+                نوشته و ارسال کنید.
+            </p>
+            <p>از طریق شبکه های اجتماعی با ما در ارتباط باشید</p>
+            <ul class="list-inline mb-0">
+                <li class="list-inline-item mb-3">
+                    <a class="twitter" href="#">
+                        <i class="fab fa-twitter fa-fw fa-lg"></i>
+                    </a>
+                </li>
 
-						<li class="list-inline-item mb-3"><a class="linkedin" href="#"><i
-									class="fab fa-linkedin-in fa-fw fa-lg"></i></a></li>
-						<li class="list-inline-item mb-3"><a class="github" href="#"><i
-									class="fab fa-github-alt fa-fw fa-lg"></i></a></li>
-						<li class="list-inline-item"><a class="instagram" href="#"><i
-									class="fab fa-instagram fa-fw fa-lg"></i></a></li>
-						<li class="list-inline-item mb-3"><a class="stack-overflow" href="#"><i
-									class="fab fa-stack-overflow fa-fw fa-lg"></i></a></li>
-						<li class="list-inline-item mb-3"><a class="medium" href="#"><i
-									class="fab fa-medium-m fa-fw fa-lg"></i></a></li>
-						<li class="list-inline-item mb-3"><a class="codepen" href="#"><i
-									class="fab fa-codepen fa-fw fa-lg"></i></a></li>
-					</ul>
-				</div>
-</div>
-		</section>
-		<section class="contact-section px-3 py-5 p-md-5">
-			<div class="container">
+                <li class="list-inline-item mb-3">
+                    <a class="linkedin" href="#">
+                        <i class="fab fa-linkedin-in fa-fw fa-lg"></i>
+                    </a>
+                </li>
+                <li class="list-inline-item mb-3">
+                    <a class="github" href="#">
+                        <i class="fab fa-github-alt fa-fw fa-lg"></i>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a class="instagram" href="#">
+                        <i class="fab fa-instagram fa-fw fa-lg"></i>
+                    </a>
+                </li>
+                <li class="list-inline-item mb-3">
+                    <a class="stack-overflow" href="#">
+                        <i class="fab fa-stack-overflow fa-fw fa-lg"></i>
+                    </a>
+                </li>
+                <li class="list-inline-item mb-3">
+                    <a class="medium" href="#">
+                        <i class="fab fa-medium-m fa-fw fa-lg"></i>
+                    </a>
+                </li>
+                <li class="list-inline-item mb-3">
+                    <a class="codepen" href="#">
+                        <i class="fab fa-codepen fa-fw fa-lg"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
 
-				@if (!string.IsNullOrWhiteSpace(ViewBag.Success))
-			   {
-				   <div class="bg-success">
-				  <p> @ViewBag.Success </p>
-				  </div>
-				   
-			   }
-			   @if (!string.IsNullOrWhiteSpace(ViewBag.Error))
-			   {
-				    <div class="bg-danger">
-				    <p> @ViewBag.Error </p>
-					</div>
-				   
-			   }
+</section>
+<section class="contact-section px-3 py-5 p-md-5">
+    <div class="container">
 
+        @if (!string.IsNullOrWhiteSpace(ViewBag.success))
+        {
+            <div class="alert-success p-5">
+                <p>@ViewBag.success</p>
+            </div>
+        }
 
+        @if (!string.IsNullOrWhiteSpace(ViewBag.error))
+        {
+            <div class="alert-danger p-5">
+                <p>@ViewBag.error</p>
+            </div>
+        }
 
-				<form id="contact-form" class="contact-form col-lg-8 mx-lg-auto" method="post" action="#">
-					<h3 class="text-center mb-3">در دسترس باشید!</h3>
-					<div class="form-row">
-						<div class="form-group col-md-6">
-							<label class="sr-only" asp-for="@Model.Name">نام</label>
-							<input type="text" class="form-control" asp-for="@Model.Name" placeholder="نام" />
-							<span asp-validation-for="@Model.Name" class="text-danger"></span> 
-							
-						</div>
-						<div class="form-group col-md-6">
-							<label class="sr-only" asp-for="@Model.Email">ایمیل</label>
-							<input type="email" class="form-control" asp-for="@Model.Email" placeholder="ایمیل" />
-								
-								<span asp-validation-for="@Model.Email" class="text-danger"></span>
-						</div>
-						<div class="form-group col-12">
-							<select class="custom-select" asp-for="@Model.Service_Id" asp-items="@Model.Services">
-								<option value="0" selected="selected" >سرویس مورد نظر خود را انتخاب کنید...</option>
-								
-							</select>
-						</div>
-						<div class="form-group col-12">
-							<label class="sr-only" asp-for="@Model.msg">پیغام شما</label>
-							<textarea class="form-control" asp-for="@Model.msg"
-								placeholder="پیغام خود را وارد نمایید ..." rows="10"
-								></textarea>
-								<span  asp-validation-for="@Model.msg" class="text_danger"></span>
-
-						</div>
-						<div class="form-group col-12">
-							<button type="submit" class="btn btn-block btn-primary py-2">ارسال</button>
-						</div>
-					</div>
-				</form>
-			</div>
-		</section>
+        <form id="contact-form" class="contact-form col-lg-8 mx-lg-auto" method="post" asp-action="Contact">
+            <h3 class="text-center mb-3">در دسترس باشید!</h3>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label class="sr-only" asp-for="Name">نام</label>
+                    <input type="text" class="form-control" asp-for="Name" placeholder="نام">
+                    <span asp-validation-for="Name" class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6">
+                    <label class="sr-only" asp-for="Email">ایمیل</label>
+                    <input type="email" class="form-control" asp-for="Email" placeholder="ایمیل">
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
+                <div class="form-group col-12">
+                    <select class="custom-select" asp-for="Service" asp-items="Model.Services">
+                        <option value="0" selected="selected">سرویس مورد نظر خود را انتخاب کنید...</option>
+                    </select>
+                </div>
+                <div class="form-group col-12">
+                    <label class="sr-only" asp-for="msg">پیغام شما</label>
+                    <textarea class="form-control" asp-for="msg"
+                              placeholder="پیغام خود را وارد نمایید ..." rows="10"></textarea>
+                </div>
+                <div class="form-group col-12">
+                    <button type="submit" class="btn btn-block btn-primary py-2">ارسال</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</section>
