--- a/Sample_CV/Sample_CV/Views/Home/Components/OSCodes/_OSCodes.cshtml
+++ b/Sample_CV/Sample_CV/Views/Home/Components/OSCodes/_OSCodes.cshtml
@@ -9,7 +9,7 @@
 			{
 				<div class="col-md-4 mb-5">
 						<div class="card blog-post-card">
-							<img class="card-img-top" src="~/assets/images/blog/blog-post-thumb-card-1.jpg" alt="image">
+							<img class="card-img-top" src="~/assets/images/OSCode/@item.Image" alt="image">
 							<div class="card-body">
 								<h5 class="card-title"><a class="theme-link" href=@item.Url>@item.Title</a></h5>
 								<p class="card-text">@item.Description</p>
