--- a/Sample_CV/Sample_CV/Views/Home/Components/Projects/PView.cshtml
+++ b/Sample_CV/Sample_CV/Views/Home/Components/Projects/PView.cshtml
@@ -12,11 +12,17 @@
 						<div class="card project-card">
 							<div class="row no-gutters">
 								<div class="col-lg-4 card-img-holder">
-									<img src="~/assets/images/project/@item.Image" class="card-img" alt=@item.Image  title="@item.Name">
+									<img src="~/assets/images/project/@item.Image" class="card-img" alt=@item.Image 
+									title="@item.Name">
 								</div>
 								<div class="col-lg-8">
 									<div class="card-body">
-										<h5 class="card-title"><a href="project.html" class="theme-link"> @item.Name</a></h5>
+										<h5 class="card-title">
+											<a asp-controller="home"  asp-action="ProjectDetails" asp-route-id=@item.Id 
+											class="theme-link"> 
+												
+											@item.Name</a>
+											</h5>
 										<p class="card-text">@item.Discription</p>
 										<p class="card-text"><small class="text-muted">مشتری: @item.Client</small></p>
 									</div>
