problem resolved by null exception handling

--- a/Sample_CV/Sample_CV/Views/Home/Components/Projects/PView.cshtml
+++ b/Sample_CV/Sample_CV/Views/Home/Components/Projects/PView.cshtml
@@ -23,7 +23,8 @@
 												
 											@item.Name</a>
 											</h5>
-										<p class="card-text">@item.Discription</p>
+											 
+										<p class=" d-flex card-text">@item.Discription.Substring(0,200)</p>
 										<p class="card-text"><small class="text-muted">مشتری: @item.Client</small></p>
 									</div>
 								</div>
