--- a/Sample_CV/Sample_CV/Views/Home/ProjectDetails.cshtml
+++ b/Sample_CV/Sample_CV/Views/Home/ProjectDetails.cshtml
@@ -2,21 +2,22 @@
 @{
     ViewData["Title"] = "اطلعات بیشتر";
 }
+@if (Model!= null)
+{
 
-<div class="col-md-6 mb-5">
-						<div class="card project-card">
-							<div class="row no-gutters">
-								<div class="col-lg-4 card-img-holder">
-									<img src="~/assets/images/project/@Model.Image" class="card-img" alt=@Model.Name 
-									title=@Model.Name>
-								</div>
-								<div class="col-lg-8">
-									<div class="card-body">
-										<h5 class="card-title"> @Model.Name </h5>
-										<p class="card-text">@Model.Discription</p>
-										<p class="card-text"><small class="text-muted">مشتری: Client</small></p>
-									</div>
-								</div>
-							</div>
-						</div>
+
+
+					<section class="about-me-section p-3 p-lg-5 theme-bg-light">
+			<div class="container">
+				<div class="profile-teaser media flex-column flex-lg-row">
+					<img class="profile-image mb-3 mb-lg-0 ml-lg-5 mr-md-0" src="~/assets/images/project/@Model.Image" alt="">
+					<div class="media-body">
+						<h2 class="name font-weight-bold mb-1">@Model.Name</h2>
+						<div class="bio mb-4"> @Model.Discription </div>
+						
 					</div>
+
+				</div>
+			</div>
+		</section>
+}
